<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="media">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="clear_search">Очистить поисковый запрос</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="tech_support">Написать в поддержку</string>
    <string name="tech_support_email" translatable="false">iu8david@gmail.com</string>
    <string name="tech_support_email_title" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="tech_support_email_message" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_application">Поделиться приложением</string>
    <string name="share">Поделиться</string>
    <string name="track_info">Подробнее</string>
    <string name="search_error_not_found">Ничего не нашлось</string>
    <string name="search_error_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="share_application_message" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_history">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="current_time_template" translatable="false">00:00</string>
    <string name="player_play_pause">Запустить или Пауза</string>
    <string name="player_like">Лайк</string>
    <string name="player_add_to_playlist">Добавить в Плейлист</string>
    <string name="back">Назад</string>
    <string name="track_img">Плакат</string>
    <string name="not_track_error">Вы открыли не трек, отсутсвует превью аудио</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists_found">Вы не создали\nни одного плейлиста</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist">"Плейлист "</string>
    <string name="created">" создан"</string>
    <string name="new_name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="track">" трек"</string>
    <string name="tracks">" треков"</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист </string>
    <string name="track_is_already_present_in_a_playlist">Трек уже добавлен в плейлист </string>
    <string name="finalize_playlist_creation">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="you_didnt_pick_file">Вы не выбрали файл</string>
    <string name="playlist_with_such_name_already_exists">Плейлист с таким именем уже существует</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist2">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="minutes0"> минут</string>
    <string name="minutes1"> минута</string>
    <string name="minutes234"> минуты</string>
    <string name="do_you_wish_to_delete1">Хотите удалить плейлист «</string>
    <string name="do_you_wish_to_delete2" translatable="false">»?</string>
    <string name="do_you_wish_to_delete_track">Удалить трек</string>
    <string name="do_you_wish_to_delete_track2">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="no_tracks">В плейлисте отсутсвуют треки</string>
</resources>



