<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/horizontal_screen_padding"
    android:paddingTop="@dimen/top_screen_padding_title"
    android:paddingBottom="@dimen/settings_screen_bottom_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/app_name"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/primary_title_size" />

    <Button
        android:id="@+id/bt_search"
        style="@style/TitleButtonStyle"
        android:text="@string/search"
        app:icon="@drawable/ic_search_lm" />

    <Button
        android:id="@+id/bt_media"
        android:text="@string/media"
        app:icon="@drawable/ic_media_lm"
        style="@style/TitleButtonStyle"/>

    <Button
        android:id="@+id/bt_settings"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_lm"
        style="@style/TitleButtonStyle"/>

</LinearLayout>

