<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/horizontal_screen_padding"
    android:paddingTop="@dimen/top_screen_padding"
    android:paddingBottom="28dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_title_size"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/bt_search"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginTop="@dimen/buttons_gap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="@dimen/primary_title_size"
        app:cornerRadius="@dimen/buttons_gap"
        app:icon="@drawable/ic_search_lm"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/bt_media"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginTop="@dimen/buttons_gap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/media"
        android:textColor="@color/black"
        android:textSize="@dimen/primary_title_size"
        app:cornerRadius="@dimen/buttons_gap"
        app:icon="@drawable/ic_media_lm"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/bt_settings"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginTop="@dimen/buttons_gap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/primary_title_size"
        app:cornerRadius="@dimen/buttons_gap"
        app:icon="@drawable/ic_settings_lm"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"
        android:textAllCaps="false" />

</LinearLayout>

