<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingStart="@dimen/horizontal_screen_padding"
    android:paddingEnd="@dimen/settings_padding"
    android:paddingTop="@dimen/top_screen_padding"
    android:paddingBottom="@dimen/settings_screen_bottom_padding">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/settings"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_title_size"
        app:icon="@drawable/ic_back_lm"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/settings_first_margin"
        app:iconTint="@color/white"
        android:padding="@dimen/zero_value"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/settings_first_margin"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="21dp"
        android:paddingBottom="22dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textColor="@color/white"
            android:textFontWeight="400"
            android:textSize="@dimen/primary_text_size"
            android:layout_gravity="start"
            android:textStyle="bold"
            />

        <Switch
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:track="@drawable/ic_track"
            android:thumb="@drawable/ic_knob"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:padding="@dimen/zero_value"
            android:paddingEnd="3dp"
            android:checked="true"
            android:thumbTint="@color/blue"
            android:trackTint="@color/track_blue"
            android:layout_marginVertical="@dimen/cardview_default_elevation"
            />

    </FrameLayout>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/zero_value"
        android:text="@string/share_application"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_size"
        app:icon="@drawable/ic_share_lm"
        app:iconGravity="end"
        app:iconTint="@color/white"
        android:minHeight="@dimen/min_height_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/tech_support"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_size"
        app:icon="@drawable/ic_tech_support_lm"
        app:iconGravity="end"
        app:iconTint="@color/white"
        android:padding="@dimen/zero_value"
        android:textAllCaps="false"
        android:minHeight="@dimen/min_height_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/user_agreement"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_size"
        app:icon="@drawable/ic_more_lm"
        app:iconGravity="end"
        app:iconTint="@color/white"
        android:padding="@dimen/zero_value"
        android:textAllCaps="false"
        android:minHeight="@dimen/min_height_button"/>

</LinearLayout>

