<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">
    <!-- копия кнопки с других лэйаутов  -->
    <Button
        android:id="@+id/bt_back"
        style="@style/BackButtonStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:contentDescription="@string/back"
        android:layout_marginTop="@dimen/top_screen_padding"
        android:layout_marginStart="@dimen/horizontal_screen_padding"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/horizontal_screen_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/horizontal_screen_padding" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalTitleBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5024" />
    <!-- 418/832 = 50,24038% -->
    <ImageView
        android:id="@+id/imageViewAlbum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/player_img_top_margins"
        android:layout_marginBottom="@dimen/settings_first_margin"
        android:contentDescription="@string/track_img"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/bt_back"
        app:layout_constraintBottom_toTopOf="@id/horizontalTitleBorder"/>
    <TextView
        android:id="@+id/title_name"
        style="@style/PlayerTitleNameStyle"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/horizontalTitleBorder"
        tools:text="Loading Title"
        />

    <TextView
        android:id="@+id/title_author"
        style="@style/PlayerTitleAuthorStyle"
        android:layout_marginTop="@dimen/settings_padding"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/title_name"
        tools:text="Loading author"
        />
    <ImageView
        android:id="@+id/bt_play"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/title_author"
        app:layout_constraintBottom_toTopOf="@id/title_time"
        android:layout_marginTop="@dimen/player_button_margins"
        android:layout_marginBottom="@dimen/top_screen_padding"
        android:layout_width="@dimen/player_button"
        android:layout_height="@dimen/player_button"
        app:layout_constraintDimensionRatio="1:1"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/bt_play_lm"
        android:contentDescription="@string/player_play_pause"
        />
    <ImageView
        android:id="@+id/bt_add_to_playlist"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@id/bt_play"
        app:layout_constraintTop_toTopOf="@id/bt_play"
        app:layout_constraintBottom_toBottomOf="@id/bt_play"
        android:layout_marginStart="@dimen/icon_padding"
        android:layout_width="@dimen/player_like_button"
        android:layout_height="@dimen/player_like_button"
        app:layout_constraintDimensionRatio="1:1"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/bt_library_lm"
        app:layout_constraintHorizontal_bias="0"
        android:contentDescription="@string/player_add_to_playlist"
        />
    <ImageView
        android:id="@+id/bt_like"
        app:layout_constraintStart_toEndOf="@id/bt_play"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toTopOf="@id/bt_play"
        app:layout_constraintBottom_toBottomOf="@id/bt_play"
        android:layout_marginEnd="@dimen/icon_padding"
        android:layout_width="@dimen/player_like_button"
        android:layout_height="@dimen/player_like_button"
        app:layout_constraintDimensionRatio="1:1"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/bt_like_lm"
        app:layout_constraintHorizontal_bias="1"
        android:contentDescription="@string/player_like"/>

    <!-- это время 00:30 плейсхолдер тк плеер еще не реализовывали,
    смысла добавлять его в strings не вижу тк этот показатель будет меняться-->
    <TextView
        android:id="@+id/title_time"
        style="@style/PlayerTitleAuthorStyle"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/bt_play"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        android:layout_marginTop="@dimen/top_screen_padding"
        android:text="0:30"/>

    <!--   В примере где мы брали плейсхолдер дискрипшн песни не влезал полность в 1 экран,
    поэтому делаю аналогично примеру с помощью ScrollView, хотя это повышает нагрузку
    альтернативно могу реализовать с помощью spread, но это не будет соответсвовать примеру
    https://www.figma.com/design/RsgAdp5CWIDWQcrSe5kZ8m/Playlist-Maker.-Placeholder-(YP)?node-id=1-258&t=cJJCWGcz9ruUIriB-0 -->
    <ScrollView
        android:layout_width="@dimen/zero_value"
        android:layout_height="@dimen/zero_value"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/title_time"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/player_margin_before_description"
        app:layout_constraintVertical_bias="0"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/description_duration"
                style="@style/PlayerDescriptionTableStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/duration"
                android:layout_marginTop="@dimen/zero_value"
                />
            <TextView
                android:id="@+id/track_duration"
                style="@style/PlayerDescriptionValueStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/description_duration"
                app:layout_constraintStart_toEndOf="@id/description_duration"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constrainedWidth="true"
                tools:text="Loading Data"
                />
            <TextView
                android:id="@+id/description_album"
                style="@style/PlayerDescriptionTableStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_duration"
                android:text="@string/album"
                />
            <TextView
                android:id="@+id/track_album"
                style="@style/PlayerDescriptionValueStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/description_album"
                app:layout_constraintStart_toEndOf="@id/description_album"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constrainedWidth="true"
                tools:text="Loading Album Name"
                />
            <androidx.constraintlayout.widget.Group
                android:id="@+id/album_group"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="track_album,description_album"/>
            <TextView
                android:id="@+id/description_year"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_album"
                style="@style/PlayerDescriptionTableStyle"
                android:text="@string/year"
                />
            <TextView
                android:id="@+id/track_year"
                style="@style/PlayerDescriptionValueStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/description_year"
                app:layout_constraintStart_toEndOf="@id/description_year"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constrainedWidth="true"
                tools:text="Loading Date"
                />
            <TextView
                android:id="@+id/description_genre"
                style="@style/PlayerDescriptionTableStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_year"
                android:text="@string/genre"
                />
            <TextView
                android:id="@+id/track_genre"
                style="@style/PlayerDescriptionValueStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/description_genre"
                app:layout_constraintStart_toEndOf="@id/description_genre"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constrainedWidth="true"
                tools:text="Loading Genre"
                />
            <TextView
                android:id="@+id/description_country"
                style="@style/PlayerDescriptionTableStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_genre"
                android:text="@string/country"
                />
            <TextView
                android:id="@+id/track_country"
                style="@style/PlayerDescriptionValueStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/description_country"
                app:layout_constraintStart_toEndOf="@id/description_country"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constrainedWidth="true"
                tools:text="Loading Country"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
